link index.html to cart.html

--- a/webshop/cart.html
+++ b/webshop/cart.html
@@ -89,7 +89,7 @@
                 <span>Tổng Tiền:</span>
                 <span id="grand_total">600,000 VND</span>
             </div>
-            <a href="checkout.php"><button class="btn btn-success">THANH TOÁN</button></a>
+            <a href="./checkout.html"><button class="btn btn-success">THANH TOÁN</button></a>
         </div>
     </div>
 
