--- a/webshop/index.html
+++ b/webshop/index.html
@@ -25,7 +25,7 @@
             <div class="nav-icon">
                 <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
                 <a href=""><i class="ti-user"></i></a>
-                <a href=""><i class="ti-shopping-cart"></i></a>  
+                <a href="./cart.html"><i class="ti-shopping-cart"></i></a>  
             </div>
         </nav>
     </header>
