--- a/webshop/product/boxer.html
+++ b/webshop/product/boxer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-< lang="en">
+<html  lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,7 +25,7 @@
             <div class="nav-icon">
                 <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
                 <a href=""><i class="ti-user"></i></a>
-                <a href=""><i class="ti-shopping-cart"></i></a>  
+                <a href="../cart.html"><i class="ti-shopping-cart"></i></a>  
             </div>
         </nav>
     </header>
