push login, register

--- a/webshop/index.html
+++ b/webshop/index.html
@@ -24,7 +24,7 @@
             </ul>
             <div class="nav-icon">
                 <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
-                <a href=""><i class="ti-user"></i></a>
+                <a href="./admin/auth/register.html"><i class="ti-user"></i></a>
                 <a href="./cart.html"><i class="ti-shopping-cart"></i></a>  
             </div>
         </nav>
