fix cart, checkout, header index.html

--- a/webshop/cart.html
+++ b/webshop/cart.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Giỏ Hàng</title>
     <link rel="stylesheet" href="./assets/css/cart.css">
+    <link rel="stylesheet" href="./assets/font/themify-icons-font (2)/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="./assets/font/fontawesome-free-6.6.0-web/fontawesome-free-6.6.0-web/css/all.css">
 </head>
 <body>
     <header>
@@ -34,9 +36,9 @@
         <div class="line"></div>
         <div class="cart">
             <div class="cart-item header">
-                <div class="stt">STT</div>
-                <div class="thumbnail">Thumbnail</div>
-                <div class="title">Tiêu Đề</div>
+                <!-- <div class="stt">STT</div> -->
+                <div class="thumbnail">Sản phẩm</div>
+                <div class="title">Thông Tin</div>
                 <div class="price">Giá</div>
                 <div class="quantity">Số Lượng</div>
                 <div class="total-price">Tổng Giá</div>
@@ -44,7 +46,7 @@
             </div>
             <!-- Các dòng dữ liệu giỏ hàng sẽ được thêm vào đây -->
             <div class="cart-item" id="row_1">
-                <div class="stt">1</div>
+                <!-- <div class="stt">1</div> -->
                 <div class="thumbnail"><img src="./assets/images/Jean1.webp" alt="Sản phẩm 1"></div>
                 <div class="title">Sản phẩm 1</div>
                 <div class="price" id="price_1" data-price="100000">100,000 VND</div>
@@ -57,7 +59,7 @@
                 <div class="actions"><button class="btn btn-danger" onclick="updateCart(1, 0)">Xoá</button></div>
             </div>
             <div class="cart-item" id="row_2">
-                <div class="stt">2</div>
+                <!-- <div class="stt">2</div> -->
                 <div class="thumbnail"><img src="./assets/images/Jean2.webp" alt="Sản phẩm 2"></div>
                 <div class="title">Sản phẩm 2</div>
                 <div class="price" id="price_2" data-price="200000">200,000 VND</div>
@@ -70,7 +72,7 @@
                 <div class="actions"><button class="btn btn-danger" onclick="updateCart(2, 0)">Xoá</button></div>
             </div>
             <div class="cart-item" id="row_3">
-                <div class="stt">3</div>
+                <!-- <div class="stt">3</div> -->
                 <div class="thumbnail"><img src="./assets/images/Jean3.webp" alt="Sản phẩm 3"></div>
                 <div class="title">Sản phẩm 3</div>
                 <div class="price" id="price_3" data-price="300000">300,000 VND</div>
