fix giao diện các trang

--- a/webshop/admin/auth/register.html
+++ b/webshop/admin/auth/register.html
@@ -4,8 +4,28 @@
     <title>Đăng Ký</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../../assets/css/register.css">
+    <link rel="stylesheet" href="../../assets/font/themify-icons-font (2)/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="../../assets/font/fontawesome-free-6.6.0-web/fontawesome-free-6.6.0-web/css/all.css">
 </head>
 <body>
+    <header>
+        <div class="top-nav"></div>
+        <nav class="nav">
+            <ul>
+                <li><a href="../../index.html"><img src="../../assets/images/logo.png" alt="Logo"></a></li>
+                <li><a href="product/jean.html">Quần jean</a></li>
+                <li><a href="product/tay.html">Quần tây</a></li>
+                <li><a href="product/short.html">Quần short</a></li>
+                <li><a href="product/jogger.html">Quần jogger</a></li>
+                <li><a href="product/boxer.html">Quần boxer</a></li>
+            </ul>
+            <div class="nav-icon">
+                <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+                <a href=""><i class="ti-user"></i></a>
+                <a href=""><i class="ti-shopping-cart"></i></a>  
+            </div>
+        </nav>
+    </header>
 
     <div class="container">
         <div class="panel panel-primary">
@@ -35,6 +55,15 @@
             </div>
         </div>
     </div>
+
+    <footer class="footer-trangchu">
+        <h3 >
+            Lưu Tường Văn - 2251120061
+        </h3>
+        <h3>
+            Dương Tấn Lộc - 2251120026
+        </h3>
+    </footer>
 
     <script src="../../assets/js/register.js"></script>
 </body>
