--- a/webshop/checkout.html
+++ b/webshop/checkout.html
@@ -13,7 +13,7 @@
         <div class="top-nav"></div>
         <nav class="nav">
             <ul>
-                <li><a href="#"><img src="./assets/images/logo.png" alt="Logo"></a></li>
+                <li><a href="./index.html"><img src="./assets/images/logo.png" alt="Logo"></a></li>
                 <li><a href="product/jean.html">Quần jean</a></li>
                 <li><a href="product/tay.html">Quần tây</a></li>
                 <li><a href="product/short.html">Quần short</a></li>
@@ -22,7 +22,7 @@
             </ul>
             <div class="nav-icon">
                 <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
-                <a href=""><i class="ti-user"></i></a>
+                <a href="./admin/auth/login.html"><i class="ti-user"></i></a>
                 <a href=""><i class="ti-shopping-cart"></i></a>  
             </div>
         </nav>
