--- a/webshop/index.html
+++ b/webshop/index.html
@@ -15,7 +15,7 @@
         <div class="top-nav"></div>
         <nav class="nav">
             <ul>
-                <li><a href="#"><img src="./assets/images/logo.png" alt="Logo"></a></li>
+                <li><a href="index.html"><img src="./assets/images/logo.png" alt="Logo"></a></li>
                 <li><a href="product/jean.html">Quần jean</a></li>
                 <li><a href="product/tay.html">Quần tây</a></li>
                 <li><a href="product/short.html">Quần short</a></li>
@@ -24,7 +24,7 @@
             </ul>
             <div class="nav-icon">
                 <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
-                <a href="./admin/auth/register.html"><i class="ti-user"></i></a>
+                <a href="./admin/auth/login.html"><i class="ti-user"></i></a>
                 <a href="./cart.html"><i class="ti-shopping-cart"></i></a>  
             </div>
         </nav>
