chỉnh sửa trang chi tiết sản phẩm

--- a/webshop/index.html
+++ b/webshop/index.html
@@ -50,7 +50,7 @@
                 <span class="jean_product_content_price" >550,000</span><span class="gachchan">đ</span><br>
                <div class="muavagiohang">
                 <a href="detail-product/detail-jean1.html" ><span class="mua">Mua ngay</span></a>
-                <img src="assets/images/giohang.gif" class="giohang" onclick="">
+                <i  class="ti-shopping-cart" onclick=""></i>
             </div>
                 </div>
             </div>
