--- a/webshop/index.html
+++ b/webshop/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +9,7 @@
     <link rel="stylesheet" href="./assets/font/fontawesome-free-6.6.0-web/fontawesome-free-6.6.0-web/css/all.css">
     <link rel="stylesheet" href="./assets/css/products.css">
     <link rel="stylesheet" href="./assets/css/detail-product.css">
-   
+    <link rel="stylesheet" href="../assets/font/icons-boostrap/icons-1.11.3/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
@@ -32,75 +31,70 @@
         </nav>
     </header>
 
-
     <div class="imggioithieu">
         <img src="assets/images/AnhGioiThieu.jpg" alt="Ảnh giới thiệu LovaStore">
-
     </div>
 
     <div class="bestseller_jean">
-    <h6>Sản phẩm jeans bán chạy </h6><hr>
-    <wrapper class="jean_slick">
-        <div class="jean_product">
-            <div class="jean_product_image">
-                <a href="detail-product/detail-jean1.html"><img class="product-image" data-product-name="Jean1" src="assets/images/Jean1.webp" alt="Sản phẩm 1"></a>
-            </div>
-            <div class="jean_product_content">
-                <div><a href="detail-product/detail-jean1.html">Quần Jean Xanh Trơn</div></a>
-                <span class="jean_product_content_price" >550,000</span><span class="gachchan">đ</span><br>
-               <div class="muavagiohang">
-                <a href="detail-product/detail-jean1.html" ><span class="mua">Mua ngay</span></a>
-                <i  class="ti-shopping-cart" onclick=""></i>
-            </div>
+        <h6>Sản phẩm jeans bán chạy </h6><hr>
+        <wrapper class="jean_slick">
+            <div class="jean_product">
+                <div class="jean_product_image">
+                    <a href="detail-product/detail-jean1.html"><img class="product-image" data-product-name="Jean1" src="assets/images/Jean1.webp" alt="Sản phẩm 1"></a>
+                </div>
+                <div class="cart-eye">
+                    <i class="bi bi-cart-plus-fill"></i>
+                    <a href="detail-product/detail-jean1.html"><i class="bi bi-eye"></i></a>
+                </div>
+                <div class="jean_product_content">
+                    <div><a href="detail-product/detail-jean1.html">Quần Jean Xanh Trơn</a></div>
+                    <span class="jean_product_content_price">550,000</span><span class="gachchan">đ</span><br>
                 </div>
             </div>
-
 
             <div class="jean_product">
                 <div class="jean_product_image">
-                    <a href="detail-product/detail-jean2.html"><img class="product-image" data-product-name="Jean2" src="assets/images/Jean2.webp" alt="Sản phẩm 1"></a>
+                    <a href="detail-product/detail-jean1.html"><img class="product-image" data-product-name="Jean1" src="assets/images/Jean1.webp" alt="Sản phẩm 1"></a>
+                </div>
+                <div class="cart-eye">
+                    <i class="bi bi-cart-plus-fill"></i>
+                    <i class="bi bi-eye"></i>
                 </div>
                 <div class="jean_product_content">
-                    <div><a href="detail-product/detail-jean2.html">Quần Jean Xanh Trơn</div></a>
-                    <span class="jean_product_content_price" >550,000</span><span class="gachchan">đ</span><br>
-                   <div class="muavagiohang">
-                    <a href="detail-product/detail-jean2.html" ><span class="mua">Mua ngay</span></a>
-                    <img src="assets/images/giohang.gif" class="giohang" onclick="">
+                    <div><a href="detail-product/detail-jean1.html">Quần Jean Xanh Trơn</a></div>
+                    <span class="jean_product_content_price">550,000</span><span class="gachchan">đ</span><br>
                 </div>
-                    </div>
+            </div>
+
+            <div class="jean_product">
+                <div class="jean_product_image">
+                    <a href="detail-product/detail-jean1.html"><img class="product-image" data-product-name="Jean1" src="assets/images/Jean1.webp" alt="Sản phẩm 1"></a>
                 </div>
+                <div class="cart-eye">
+                    <i class="bi bi-cart-plus-fill"></i>
+                    <i class="bi bi-eye"></i>
+                </div>
+                <div class="jean_product_content">
+                    <div><a href="detail-product/detail-jean1.html">Quần Jean Xanh Trơn</a></div>
+                    <span class="jean_product_content_price">550,000</span><span class="gachchan">đ</span><br>
+                </div>
+            </div>
 
-
-                <div class="jean_product">
-                    <div class="jean_product_image">
-                        <a href="detail-product/detail-jean4.html"><img class="product-image" data-product-name="Jean4" src="assets/images/Jean3.webp" alt="Sản phẩm 1"></a>
-                    </div>
-                    <div class="jean_product_content">
-                        <div><a href="detail-product/detail-jean4.html">Quần Jean Xanh Trơn</div></a>
-                        <span class="jean_product_content_price" >550,000</span><span class="gachchan">đ</span><br>
-                       <div class="muavagiohang">
-                        <a href="detail-product/detail-jean4.html" ><span class="mua">Mua ngay</span></a>
-                        <img src="assets/images/giohang.gif" class="giohang" onclick="">
-                    </div>
-                        </div>
-                    </div>
-
-                    <div class="jean_product">
-                        <div class="jean_product_image">
-                            <a href="detail-product/detail-jean6.html"><img class="product-image" data-product-name="Jean6" src="assets/images/Jean2.webp" alt="Sản phẩm 1"></a>
-                        </div>
-                        <div class="jean_product_content">
-                            <div><a href="detail-product/detail-jean6.html">Quần Jean Xanh Trơn</div></a>
-                            <span class="jean_product_content_price" >550,000</span><span class="gachchan">đ</span><br>
-                           <div class="muavagiohang">
-                            <a href="detail-product/detail-jean6.html" ><span class="mua">Mua ngay</span></a>
-                            <img src="assets/images/giohang.gif" class="giohang" onclick="">
-                        </div>
-                            </div>
-                        </div>
-
-    </wrapper>
-</div>
+            <div class="jean_product">
+                <div class="jean_product_image">
+                    <a href="detail-product/detail-jean1.html"><img class="product-image" data-product-name="Jean1" src="assets/images/Jean1.webp" alt="Sản phẩm 1"></a>
+                </div>
+                <div class="cart-eye">
+                    <i class="bi bi-cart-plus-fill"></i>
+                    <i class="bi bi-eye"></i>
+                </div>
+                <div class="jean_product_content">
+                    <div><a href="detail-product/detail-jean1.html">Quần Jean Xanh Trơn</a></div>
+                    <span class="jean_product_content_price">550,000</span><span class="gachchan">đ</span><br>
+                </div>
+            </div>
+        </wrapper>
+    </div>
 
 <div class="bestseller_tay">
     <h6>Sản phẩm quần tây bán chạy</h6><hr>
