sửa trang index

--- a/webshop/detail-product/detail-jean1.html
+++ b/webshop/detail-product/detail-jean1.html
@@ -82,7 +82,7 @@
                 </ul>
             </div>
 
-            <span>Số lượng:<input type="number" id="soluong" name="soluong" min="0" step="1" class="container_soluong"><input class="addcart" id="addcart" name="addcart" type="button" value="Thêm vào giỏ " onclick=""></span>
+            <span>Số lượng:<input type="number" id="soluong" name="soluong" value="1" min="1" step="1" class="container_soluong"><input class="addcart" id="addcart" name="addcart" type="button" value="Thêm vào giỏ " onclick=""></span>
             <br>
             <a href="#"><div class="container_mua"><div class="container_mua_content">MUA NGAY</div></div></a>
             <br>
