--- a/webshop/index.html
+++ b/webshop/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="cart-eye">
                     <i class="bi bi-cart-plus-fill"></i>
-                    <i class="bi bi-eye"></i>
+                    <a href="detail-product/detail-jean1.html"><i class="bi bi-eye"></i></a>
                 </div>
                 <div class="jean_product_content">
                     <div><a href="detail-product/detail-jean1.html">Quần Jean Xanh Trơn</a></div>
@@ -72,7 +72,7 @@
                 </div>
                 <div class="cart-eye">
                     <i class="bi bi-cart-plus-fill"></i>
-                    <i class="bi bi-eye"></i>
+                    <a href="detail-product/detail-jean1.html"><i class="bi bi-eye"></i></a>
                 </div>
                 <div class="jean_product_content">
                     <div><a href="detail-product/detail-jean1.html">Quần Jean Xanh Trơn</a></div>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="cart-eye">
                     <i class="bi bi-cart-plus-fill"></i>
-                    <i class="bi bi-eye"></i>
+                    <a href="detail-product/detail-jean1.html"><i class="bi bi-eye"></i></a>
                 </div>
                 <div class="jean_product_content">
                     <div><a href="detail-product/detail-jean1.html">Quần Jean Xanh Trơn</a></div>
