--- a/webshop/product/jean.html
+++ b/webshop/product/jean.html
@@ -14,29 +14,28 @@
     
 </head>
 <br>
-    <header>
-        <div class="top-nav"></div>
-        <nav class="nav">
-            <ul>
-                <li><a href="../index.html"><img src="../assets/images/logo.png" alt="Logo"></a></li>
-                <li><a href="jean.html">Quần jean</a></li>
-                <li><a href="tay.html">Quần tây</a></li>
-                <li><a href="short.html">Quần short</a></li>
-                <li><a href="jogger.html">Quần jogger</a></li>
-                <li><a href="boxer.html">Quần boxer</a></li>
-            </ul>
-            <div class="nav-icon">
-                <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
-                <a href=""><i class="ti-user"></i></a>
-                <a href="../cart.html"><i class="ti-shopping-cart"></i></a>  
-            </div>
-        </nav>
-    </header>
-    <br><br> <br><br>
-    <div class="underheader"><br>
+<header>
+    <nav class="nav">
+        <ul>
+            <li><a href="../index.html"><img src="../assets/images/logo.png" alt="Logo"></a></li>
+            <li><a href="jean.html">Quần jean</a></li>
+            <li><a href="tay.html">Quần tây</a></li>
+            <li><a href="short.html">Quần short</a></li>
+            <li><a href="jogger.html">Quần jogger</a></li>
+            <li><a href="boxer.html">Quần boxer</a></li>
+        </ul>
+        <div class="nav-icon">
+            <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+            <a href=""><i class="ti-user"></i></a>
+            <a href="../cart.html"><i class="ti-shopping-cart"></i></a>  
+        </div>
+    </nav>
+</header>
+
+<div class="underheader">
     <a href="../index.html">Trang chủ</a>
     <a href="jean.html">/Quần jean</a>
-    </div>
+</div>
     <div class="slick_slider">
         <img class="slick_slider_image" src="../assets/images/JeanSlide.jpg" alt="Ảnh quần jean">
        
