--- a/webshop/tranggioithieu.html
+++ b/webshop/tranggioithieu.html
@@ -9,20 +9,32 @@
     
 </head>
 <body>
-    <header><div class="top-nav"></div></header>
-    <div class="lovahead">
-        <h1>LoVa Store</h1>
+    <div class="thongtinlova">
+        <fieldset>
+        <legend>Thông tin về LoVa Store</legend>
         <div class="chaomung">Chào mừng đến với Lova Store!</div>
-        <div class="lovahead_content">Chúng tôi tự hào là điểm đến lý tưởng cho các tín đồ thời trang,
-             nơi bạn có thể tìm thấy những mẫu quần đẹp nhất, phong cách nhấ
-              và chất lượng nhất. Với sự đa dạng về mẫu mã, kiểu dáng và 
-              chất liệu, LoVa Store mang đến cho bạn những trải nghiệm mua 
-              sắm tuyệt vời.</div>
-
-        </div>
+        <div class="thongtinlova_noidung">LoVa Store được thành lập vào năm 2024 bởi Dương Tấn Lộc
+             và Lưu Trường Văn,một người đam mê thời trang với mục tiêu mang đến những sản phẩm
+              denim chất lượng cao cho người tiêu dùng Việt Nam. Xuất phát từ một cửa hàng 
+              nhỏ tại TP. Hồ Chí Minh, LoVaS Store nhanh chóng phát triển nhờ vào chất lượng 
+              sản phẩm và dịch vụ khách hàng tận tâm. Shop cam kết sử dụng chất liệu denim 
+              cao cấp và áp dụng những kỹ thuật sản xuất tiên tiến nhất. Đến nay, LoVa Store 
+              đã trở thành địa chỉ mua sắm tin cậy cho những người yêu thích thời trang
+              denim trên cả nước, với phương châm <b>"Chất lượng làm nên thương hiệu"</b>.
+               <br><br>LoVa Store là cửa hàng thời trang chuyên cung cấp các sản phẩm 
+               quần jean, quần tây, quần short, quần jogger và quần boxer dành cho nam. 
+               Với chất liệu denim cao cấp, sản phẩm của chúng tôi không chỉ bền bỉ mà còn 
+               mang lại sự thoải mái và phong cách hiện đại. Chúng tôi tự hào với 
+               bộ sưu tập đa dạng, phù hợp với mọi phong cách từ casual, công sở đến 
+               thể thao. Đặc biệt, các sản phẩm tại Lova Store luôn được cập nhật 
+               theo xu hướng thời trang mới nhất, giúp khách hàng luôn tự tin và 
+               nổi bật.</div>
+            </fieldset>
+    </div>
+  
 
         <div class="tranggioithieu">
-            <img src="assets/images/AnhGioiThieu_NenTrang.jpg" alt="Ảnh giới thiệu LovaStore">
+            <img src="assets/images/AnhGioiThieu.jpg" alt="Ảnh giới thiệu LovaStore">
     
         </div>
 
