--- a/webshop/detail-product/detail-jean1.html
+++ b/webshop/detail-product/detail-jean1.html
@@ -95,11 +95,13 @@
             <div>1/ Áp dụng 1 lần đổi/1 đơn hàng</div><br>
             <div>2. Sản phẩm đổi trong vòng 7 ngày tính từ ngày nhận hàng</div><br>
             <div>**Chính sách chỉ áp dụng khi sản phẩm còn hoá đơn mua hàng, còn nguyên nhãn mác của sản phẩm. Sản phẩm không bị dơ bẩn, hư hỏng bởi những tác nhân bên ngoài cửa hàng sau khi mua hàng</div><br>
-            <hr><br>
-            <h7>Mô tả sản phẩm:</h7>
+            
+            <div class="mota">
+            <h7>Mô tả sản phẩm</h7><hr>
             <div>1/ Chất liệu: Denim</div><br>
             <div>2/ Form quần: Slimfit</div><br>
             <div>3/ Màu sắc: Xanh ngọc </div>
+        </div>
         </div>
 
         <div class="under_product_bangsize">
@@ -109,12 +111,22 @@
         </div>
     </div>
 
-    <footer class="footer_product_detail">
-        <div>Địa chỉ cửa hàng: Trường đại học Giao Thông Vận Tải </div><br>
-        <a class="lovastore" href="https://www.facebook.com/16072004xx/ ">
+    <footer >
+        <div class="diachi">
+            <div>Địa chỉ cửa hàng: Trường đại học Giao Thông Vận Tải </div>
+        <a href="https://maps.app.goo.gl/EEbwVt7azQqeW35a8?g_st=ic" target=_blank><img src="../assets/images/Diachi.jpg" alt="Địa chỉ"></a></div>
+
+        <div class="zalo">
+            <div>Chăm sóc khách hàng: 0931167255</div>
+            <img src="../assets/images/QR.jpg">
+        </div>
+
+       <div class="fanpage">
             <div>Fanpage: LoVa Store </div>
-        </a><br>
-        <div>Chăm sóc khách hàng: 0931167255</div>
+            <a href="https://www.facebook.com/16072004xx/" target="_blank"><img src="../assets/images/Fanpage.jpg"></a>
+    </div>
+   
+        
     </footer>
 </body>
 </html>
