--- a/webshop/index.html
+++ b/webshop/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang chủ</title>
+    <title>LoVa Store</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/font/themify-icons-font (2)/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="./assets/font/fontawesome-free-6.6.0-web/fontawesome-free-6.6.0-web/css/all.css">
@@ -22,11 +22,12 @@
                 <li><a href="product/short.html">Quần short</a></li>
                 <li><a href="product/jogger.html">Quần jogger</a></li>
                 <li><a href="product/boxer.html">Quần boxer</a></li>
-                <li><a href="tranggioithieu.html" target="_blank">Giới thiệu LoVa</a></li>
+                <li><a href="tranggioithieu.html" target="_blank">Giới thiệu LoVa Store</a></li>
             </ul>
             <div class="nav-icon">
-                <a href="./admin/auth/login.html"><i class="ti-user"></i></a>
                 <a href="./cart.html"><i class="ti-shopping-cart"></i></a>  
+                <a href="./admin/auth/login.html"><i class="ti-user"></i></a>
+                
             </div>
         </nav>
     </header>
