sửa size trang chi tiết sản phẩm

--- a/webshop/detail-product/detail-jean1.html
+++ b/webshop/detail-product/detail-jean1.html
@@ -56,10 +56,11 @@
 
         <div class="container_content">Quần Jean Nam Xanh Trơn Ống Ôm - LoVa
             <p>Còn hàng</p>
-            <div class="container_id">Mã sản phẩm: Lova123456789</div>
+
+            <div class="container_id"><b>Mã sản phẩm:</b>Lova123456789</div>
             <div class="container_price">Giá: <span class="container_sotien">550,000</span><span class="gachchan">đ</span></div>
             <fieldset class="container_sales">
-                <legend>Khuyến mãi - Ưu đãi</legend>
+                <legend class="font-size-soluong">Khuyến mãi - Ưu đãi</legend>
                 <div>Miễn phí vận chuyển cho đơn từ 399K</div>
                 <div>Nhập mã <b>S10</b> GIẢM 10% tối đa 10K</div>
                 <div>Nhập mã <b>S40</b> GIẢM 40% tối đa 599K</div>
@@ -81,7 +82,7 @@
                 </ul>
             </div>
 
-            <span>Số lượng:<input type="number" id="soluong" name="soluong" value="1" min="1" step="1" class="container_soluong"><input class="addcart" id="addcart" name="addcart" type="button" value="Thêm vào giỏ " onclick=""></span>
+            <span class="font-size-soluong">Số lượng:<input type="number" id="soluong" name="soluong" value="1" min="1" step="1" class="container_soluong"><input class="addcart" id="addcart" name="addcart" type="button" value="Thêm vào giỏ " onclick=""></span>
             <br>
             <a href="#"><div class="container_mua"><div class="container_mua_content">MUA NGAY</div></div></a>
             <br>
@@ -100,6 +101,7 @@
             <h7>Mô tả sản phẩm</h7><hr>
             <div>1/ Chất liệu: Denim</div><br>
             <div>2/ Form quần: Slimfit</div><br>
+
             <div>3/ Màu sắc: Xanh ngọc </div>
         </div>
         </div>
