--- a/webshop/text.html
+++ b/webshop/text.html
@@ -47,26 +47,26 @@
                 </div>
                 <div class="cart-eye">
                     <i class="bi bi-cart-plus-fill"></i>
-                    <i id = "myBtn" class="bi bi-eye"></i>
+                    <i class="bi bi-eye"></i>
                 </div>
                 <div id="myModal" class="modal">
                     <div class="container-modal">
+                        <span class="close">&times;</span>
                         <div class="container_modal_anh">
-                            <img src="assets/images/Jean1" alt="">
-
+                            <img src="assets/images/Jean1.webp" alt="Sản phẩm 1">
                         </div>
                         <div class="container_modal_content">
                             <div>Quần Jean Nam Xanh Trơn</div>
                             <div> Mã: LoVa12345678</div>
                             <div> Giá: 550,000đ</div>
-                            <div >Size </div>
+                            <div>Size</div>
                             <button name="28" type="button" class="size-button" data-size="28">28</button>
-                            <button name="28" type="button" class="size-button" data-size="28">28</button>
-                            <button name="28" type="button" class="size-button" data-size="28">28</button>
-                            <button name="28" type="button" class="size-button" data-size="28">28</button>
-                            <button name="28" type="button" class="size-button" data-size="28">28</button>
+                            <button name="30" type="button" class="size-button" data-size="30">30</button>
+                            <button name="32" type="button" class="size-button" data-size="32">32</button>
+                            <button name="34" type="button" class="size-button" data-size="34">34</button>
+                            <button name="36" type="button" class="size-button" data-size="36">36</button>
                         </div>
-                        <div><input type="number" value="1" min="1" step="1"><button name="themvaogio" type="button">Thêm vào giỏ </button></div>
+                        <div><input type="number" value="1" min="1" step="1"><button name="themvaogio" type="button">Thêm vào giỏ</button></div>
                     </div>
                 </div>
                 <div class="jean_product_content">
