sửa phần underheader

--- a/webshop/product/jean.html
+++ b/webshop/product/jean.html
@@ -26,8 +26,8 @@
                 <li><a href="../tranggioithieu.html" target="_blank">Giới thiệu LoVa</a></li>
             </ul>
             <div class="nav-icon">
-                <a href="./cart.html"><i class="ti-shopping-cart"></i></a>  
-                <a href="./admin/auth/login.html"><i class="ti-user"></i></a>
+                <a href="../cart.html"><i class="ti-shopping-cart"></i></a>  
+                <a href="../admin/auth/login.html"><i class="ti-user"></i></a>
                 
             </div>
         </nav>
@@ -36,7 +36,7 @@
 <div class="underheader">
     <div class="underheader_content">
     <a href="../index.html">Trang chủ</a>
-    <a href="jean.html">/ <b>Quần jean</b></a>
+    <a href="jean.html">/<span class="font-bold">Quần jean</span></a>
 </div>
 </div>
     <div class="slick_slider">
