--- a/webshop/product/jean.html
+++ b/webshop/product/jean.html
@@ -26,9 +26,8 @@
                 <li><a href="../tranggioithieu.html" target="_blank">Giới thiệu LoVa</a></li>
             </ul>
             <div class="nav-icon">
-                <a href="../cart.html"><i class="ti-shopping-cart"></i></a>  
-                <a href="../admin/auth/login.html"><i class="ti-user"></i></a>
-                
+                <a href="./admin/auth/login.html"><i class="ti-user"></i></a>
+                <a href="./cart.html"><i class="bi bi-cart3"></i></i></a>  
             </div>
         </nav>
     </header>
