--- a/webshop/product/tay.html
+++ b/webshop/product/tay.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/font/themify-icons-font (2)/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="../assets/font/fontawesome-free-6.6.0-web/fontawesome-free-6.6.0-web/css/all.css">
+    <link rel="stylesheet" href="../assets/font/icons-boostrap/icons-1.11.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../assets/css/products.css">
     <link rel="stylesheet" href="../assets/css/detail-product.css">
 </head>
@@ -23,9 +24,8 @@
                 <li><a href="boxer.html">Quần boxer</a></li>
             </ul>
             <div class="nav-icon">
-                <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
-                <a href=""><i class="ti-user"></i></a>
-                <a href="../cart.html"><i class="ti-shopping-cart"></i></a>  
+                <a href="./admin/auth/login.html"><i class="ti-user"></i></a>
+                <a href="./cart.html"><i class="bi bi-cart3"></i></i></a>  
             </div>
         </nav>
     </header>
