cập nhâp đăng nhập, đăng ký

--- a/webshop/cart.html
+++ b/webshop/cart.html
@@ -28,10 +28,12 @@
             </div>
         </nav>
     </header>
-    <br><br> <br><br>
-    <div class="underheader"><br>
-    <a href="../index.html">Trang chủ</a>
-    <a href="tay.html">/Quần Tây</a>
+    
+    <div class="underheader">
+        <div class="underheader_content">
+        <a href="../index.html">Trang chủ</a>
+        <a href="jean.html">/ <span class="font-bold">Giỏ hàng</span></a>
+    </div>
 
     <div class="container-cart" >
         <div class="cart-header">
@@ -72,12 +74,10 @@
             <img src="assets/images/QR.jpg">
         </div>
 
-       <div class="fanpage">
+        <div class="fanpage">
             <div>Fanpage: LoVa Store </div>
             <a href="https://www.facebook.com/16072004xx/" target="_blank"><img src="assets/images/Fanpage.jpg"></a>
-    </div>
-   
-        
+        </div>      
     </footer>
 
     <script src="./assets/js/cart.js"></script>
