--- a/webshop/checkout.html
+++ b/webshop/checkout.html
@@ -27,10 +27,12 @@
             </div>
         </nav>
     </header>
-    <br><br> <br><br>
-    <div class="underheader"><br>
-    <a href="../index.html">Trang chủ</a>
-    <a href="tay.html">/Quần Tây</a>
+    
+    <div class="underheader">
+        <div class="underheader_content">
+        <a href="../index.html">Trang chủ</a>
+        <a href="jean.html">/ <span class="font-bold">Thanh toán</span></a>
+    </div>
 
     <div class="container">
         <form method="post" onsubmit="return completeCheckout();"  autocomplete="off">
