--- a/webshop/admin/auth/register.html
+++ b/webshop/admin/auth/register.html
@@ -3,29 +3,35 @@
 <head>
     <title>Đăng Ký</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../../assets/css/register.css">
+    <link rel="stylesheet" href="../../assets/css/register.css">
     <link rel="stylesheet" href="../../assets/font/themify-icons-font (2)/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="../../assets/font/fontawesome-free-6.6.0-web/fontawesome-free-6.6.0-web/css/all.css">
+    <link rel="stylesheet" href="../../assets/font/icons-boostrap/icons-1.11.3/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
         <div class="top-nav"></div>
         <nav class="nav">
             <ul>
-                <li><a href="../../index.html"><img src="../../assets/images/logo.png" alt="Logo"></a></li>
-                <li><a href="product/jean.html">Quần jean</a></li>
-                <li><a href="product/tay.html">Quần tây</a></li>
-                <li><a href="product/short.html">Quần short</a></li>
-                <li><a href="product/jogger.html">Quần jogger</a></li>
-                <li><a href="product/boxer.html">Quần boxer</a></li>
+                <li><a href="../index.html"><img src="../../assets/images/logo.png" alt="Logo"></a></li>
+                <li><a href="jean.html">Quần jean</a></li>
+                <li><a href="tay.html">Quần tây</a></li>
+                <li><a href="short.html">Quần short</a></li>
+                <li><a href="jogger.html">Quần jogger</a></li>
+                <li><a href="boxer.html">Quần boxer</a></li>
             </ul>
             <div class="nav-icon">
-                <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
-                <a href=""><i class="ti-user"></i></a>
-                <a href=""><i class="ti-shopping-cart"></i></a>  
+                <a href="./admin/auth/login.html"><i class="ti-user"></i></a>
+                <a href="#"><i class="bi bi-cart3"></i></i></a>  
             </div>
         </nav>
     </header>
+    
+    <div class="underheader">
+        <div class="underheader_content">
+        <a href="../index.html">Trang chủ</a>
+        <a href="register.html">/ <span class="font-bold">Đăng Ký</span></a>
+    </div>
 
     <div class="container">
         <div class="panel panel-primary">
@@ -56,15 +62,20 @@
         </div>
     </div>
 
-    <footer class="footer-trangchu">
-        <h3 >
-            Lưu Tường Văn - 2251120061
-        </h3>
-        <h3>
-            Dương Tấn Lộc - 2251120026
-        </h3>
-    </footer>
+    <footer >
+        <div class="diachi">
+            <div>Địa chỉ cửa hàng: Trường đại học Giao Thông Vận Tải </div>
+        <a href="https://maps.app.goo.gl/EEbwVt7azQqeW35a8?g_st=ic" target=_blank><img src="../../assets/images/Diachi.jpg" alt="Địa chỉ"></a></div>
 
-    <script src="../../assets/js/register.js"></script>
+        <div class="zalo">
+            <div>Chăm sóc khách hàng: 0931167255</div>
+            <img src="../../assets/images/QR.jpg">
+        </div>
+
+        <div class="fanpage">
+            <div>Fanpage: LoVa Store </div>
+            <a href="https://www.facebook.com/16072004xx/" target="_blank"><img src="../../assets/images/Fanpage.jpg"></a>
+        </div>      
+    </footer>
 </body>
 </html>
