--- a/webshop/checkout.html
+++ b/webshop/checkout.html
@@ -11,27 +11,27 @@
 </head>
 <body>
     <header>
-        <div class="top-nav"></div>
+       
         <nav class="nav">
             <ul>
                 <li><a href="../index.html"><img src="../assets/images/logo.png" alt="Logo"></a></li>
-                <li><a href="jean.html">Quần jean</a></li>
-                <li><a href="tay.html">Quần tây</a></li>
-                <li><a href="short.html">Quần short</a></li>
-                <li><a href="jogger.html">Quần jogger</a></li>
-                <li><a href="boxer.html">Quần boxer</a></li>
+                <li><a href="../product/jean.html">Quần jean</a></li>
+                <li><a href="../product/tay.html">Quần tây</a></li>
+                <li><a href="../product/short.html">Quần short</a></li>
+                <li><a href="../product/jogger.html">Quần jogger</a></li>
+                <li><a href="../product/boxer.html">Quần boxer</a></li>
             </ul>
             <div class="nav-icon">
-                <a href="./admin/auth/login.html"><i class="ti-user"></i></a>
-                <a href="./cart.html"><i class="bi bi-cart3"></i></i></a>  
+                <a href="../cart.html"><i class="ti-shopping-cart"></i></a>  
+                <a href="../admin/auth/login.html"><i class="ti-user"></i></a>
             </div>
         </nav>
     </header>
     
     <div class="underheader">
-        <div class="underheader_content">
         <a href="../index.html">Trang chủ</a>
-        <a href="jean.html">/ <span class="font-bold">Thanh toán</span></a>
+        <a href="../product/jean.html">/Quần jean</a>
+        <a href="detail-jean1.html">/<span class="font-bold">Quần jean xanh trơn</span></a>
     </div>
 
     <div class="container">
