fix header, underheader

--- a/webshop/admin/auth/register.html
+++ b/webshop/admin/auth/register.html
@@ -21,8 +21,8 @@
                 <li><a href="boxer.html">Quần boxer</a></li>
             </ul>
             <div class="nav-icon">
+                <a href="#"><i class="ti-shopping-cart"></i></a>  
                 <a href="./admin/auth/login.html"><i class="ti-user"></i></a>
-                <a href="#"><i class="bi bi-cart3"></i></i></a>  
             </div>
         </nav>
     </header>
