--- a/webshop/cart.html
+++ b/webshop/cart.html
@@ -28,11 +28,10 @@
             </div>
         </nav>
     </header>
-    
+
     <div class="underheader">
         <a href="../index.html">Trang chủ</a>
-        <a href="../product/jean.html">/Quần jean</a>
-        <a href="detail-jean1.html">/<span class="font-bold">Quần jean xanh trơn</span></a>
+        <a href="detail-jean1.html">/ <span class="font-bold">Giỏ hàng</span></a>
     </div>
 
     <div class="container-cart" >
