--- a/webshop/checkout.html
+++ b/webshop/checkout.html
@@ -30,8 +30,7 @@
     
     <div class="underheader">
         <a href="../index.html">Trang chủ</a>
-        <a href="../product/jean.html">/Quần jean</a>
-        <a href="detail-jean1.html">/<span class="font-bold">Quần jean xanh trơn</span></a>
+        <a href="checkout.html">/ <span class="font-bold">Thanh toán</span></a>
     </div>
 
     <div class="container">
