--- a/webshop/admin/auth/login.html
+++ b/webshop/admin/auth/login.html
@@ -21,8 +21,8 @@
                 <li><a href="boxer.html">Quần boxer</a></li>
             </ul>
             <div class="nav-icon">
+                <a href="./cart.html"><i class="ti-shopping-cart"></i></i></a>  
                 <a href="./admin/auth/login.html"><i class="ti-user"></i></a>
-                <a href="./cart.html"><i class="bi bi-cart3"></i></i></a>  
             </div>
         </nav>
     </header>
