đổi màu nền và cập nhật các trang chi tiết

--- a/webshop/cart.html
+++ b/webshop/cart.html
@@ -15,15 +15,15 @@
        
         <nav class="nav">
             <ul>
-                <li><a href="../index.html"><img src="../assets/images/logo.png" alt="Logo"></a></li>
-                <li><a href="../product/jean.html">Quần jean</a></li>
-                <li><a href="../product/tay.html">Quần tây</a></li>
-                <li><a href="../product/short.html">Quần short</a></li>
-                <li><a href="../product/jogger.html">Quần jogger</a></li>
-                <li><a href="../product/boxer.html">Quần boxer</a></li>
+                <li><a href="index.html"><img src="../assets/images/logo.png" alt="Logo"></a></li>
+                <li><a href="product/jean.html">Quần jean</a></li>
+                <li><a href="product/tay.html">Quần tây</a></li>
+                <li><a href="product/short.html">Quần short</a></li>
+                <li><a href="product/jogger.html">Quần jogger</a></li>
+                <li><a href="product/boxer.html">Quần boxer</a></li>
             </ul>
             <div class="nav-icon">
-                <a href="../cart.html"><i class="ti-shopping-cart"></i></a>  
+                <a href="cart.html"><i class="ti-shopping-cart"></i></a>  
                 <a href="../admin/auth/login.html"><i class="ti-user"></i></a>
             </div>
         </nav>
