--- a/webshop/product/jogger.html
+++ b/webshop/product/jogger.html
@@ -137,7 +137,7 @@
                 <a href="../detail-product/detail-jogger7.html"><i class="bi bi-eye"></i></a>
             </div>
             <div class="jean_product_content">
-                <div><a href="../detail-product/detail-jogger7.html">Quần Jogger Xanh Lục r</a></div>
+                <div><a href="../detail-product/detail-jogger7.html">Quần Jogger Xanh Lục </a></div>
                 <span class="jean_product_content_price">260,000</span><span class="gachchan">đ</span><br>
             </div>
         </div>
