--- a/webshop/detail-product/detail-jogger7.html
+++ b/webshop/detail-product/detail-jogger7.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quần Short Tây Xám Xanh </title>
+    <title>Quần Jogger Xanh Lục</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/font/themify-icons-font (2)/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="../assets/font/fontawesome-free-6.6.0-web/fontawesome-free-6.6.0-web/css/all.css">
@@ -32,33 +32,33 @@
     </header>
     <div class="underheader">
         <a href="../index.html">Trang chủ</a>
-        <a href="../product/short.html">/Quần short</a>
-        <a href="detail-short3.html">/<span class="font-bold">Quần short tây xám xanh</span></a>
+        <a href="../product/jogger.html">/Quần jogger</a>
+        <a href="detail-jogger7.html">/<span class="font-bold">Quần jogger xanh lục ống suông  </span></a>
     </div>
 
     <div class="container">
         <div class="container_extra">
-            <img class="img-detail" src="../assets/images/Short3.webp" data-index="0">
-            <img class="img-detail" src="../assets/images/Short3-1.webp" data-index="1">
-            <img class="img-detail" src="../assets/images/Short3-2.webp" data-index="2">
-            <img class="img-detail" src="../assets/images/Short3-3.webp" data-index="3">
+            <img class="img-detail" src="../assets/images/Jogger7.webp" data-index="0">
+            <img class="img-detail" src="../assets/images/Jogger7-1.webp" data-index="1">
+            <img class="img-detail" src="../assets/images/Jogger7-2.webp" data-index="2">
+            <img class="img-detail" src="../assets/images/Jogger7-3.webp" data-index="3">
         </div>
         <div class="container_detail">
             <div class="slideshow-container">
-                <img class="slide-image" src="../assets/images/Short3.webp" alt="Quần short 1">
-                <img class="slide-image" src="../assets/images/Short3-1.webp" alt="Quần short 1-1">
-                <img class="slide-image" src="../assets/images/Short3-2.webp" alt="Quần short 1-2">
-                <img class="slide-image" src="../assets/images/Short3-3.webp" alt="Quần short  1-3">
+                <img class="slide-image" src="../assets/images/Short7.webp" alt="Quần tây 1">
+                <img class="slide-image" src="../assets/images/Short7-1.webp" alt="Quần tây 1-1">
+                <img class="slide-image" src="../assets/images/Short7-2.webp" alt="Quần tây 1-2">
+                <img class="slide-image" src="../assets/images/Short7-3.webp" alt="Quần tây  1-3">
                 <a class="prev" onclick="prevSlide()">&#10094;</a>
                 <a class="next" onclick="nextSlide()">&#10095;</a>
             </div>
         </div>
 
-        <div class="container_content">Quần Short Tây Nam Xám Xanh - LoVa
+        <div class="container_content">Quần Jogger Nam Xanh Lục Ống Suông - LoVa
             <p>Còn hàng</p>
 
             <div class="container_id"><b>Mã sản phẩm:</b>Lova123456789</div>
-            <div class="container_price">Giá: <span class="container_sotien">290,000</span><span class="gachchan">đ</span></div>
+            <div class="container_price">Giá: <span class="container_sotien">260,000</span><span class="gachchan">đ</span></div>
             <fieldset class="container_sales">
                 <legend class="font-size-soluong">Khuyến mãi - Ưu đãi</legend>
                 <div>Miễn phí vận chuyển cho đơn từ 399K</div>
@@ -100,7 +100,7 @@
             
             <div class="mota">
             <h7>Mô tả sản phẩm</h7><hr>
-            <div>1/ Chất liệu: Thun</div><br>
+            <div>1/ Chất liệu: Kaki</div><br>
             <div>2/ Form quần: Slimfit</div><br>
 
             <div>3/ Màu sắc: Đen </div>
@@ -110,7 +110,7 @@
         <div class="under_product_bangsize">
             <h7>Bảng Size</h7>
             <hr>
-            <img src="../assets/images/SizeQuanShort.webp">
+            <img src="../assets/images/SizeQuanJogger.webp">
         </div>
     </div>
 
