--- a/webshop/detail-product/detail-short7.html
+++ b/webshop/detail-product/detail-short7.html
@@ -45,10 +45,10 @@
         </div>
         <div class="container_detail">
             <div class="slideshow-container">
-                <img class="slide-image" src="../assets/images/Short7.webp" alt="Quần tây 1">
-                <img class="slide-image" src="../assets/images/Short7-1.webp" alt="Quần tây 1-1">
-                <img class="slide-image" src="../assets/images/Short7-2.webp" alt="Quần tây 1-2">
-                <img class="slide-image" src="../assets/images/Short7-3.webp" alt="Quần tây  1-3">
+                <img class="slide-image" src="../assets/images/Short7.webp" alt="Quần short 1">
+                <img class="slide-image" src="../assets/images/Short7-1.webp" alt="Quần short 1-1">
+                <img class="slide-image" src="../assets/images/Short7-2.webp" alt="Quần short 1-2">
+                <img class="slide-image" src="../assets/images/Short7-3.webp" alt="Quần short  1-3">
                 <a class="prev" onclick="prevSlide()">&#10094;</a>
                 <a class="next" onclick="nextSlide()">&#10095;</a>
             </div>
