--- a/webshop/detail-product/detail-short4.html
+++ b/webshop/detail-product/detail-short4.html
@@ -77,7 +77,7 @@
                     <button name="32" type="button" class="size-button" data-size="32">32</button>
                     <button name="33" type="button" class="size-button" data-size="33">33</button>
                     <button name="34" type="button" class="size-button" data-size="34">34</button>
-                   
+                    <button name="35" type="button" class="size-button" data-size="35">35</button>
                
                 </ul>
             </div>
