--- a/webshop/admin/auth/register.html
+++ b/webshop/admin/auth/register.html
@@ -13,12 +13,13 @@
         <div class="top-nav"></div>
         <nav class="nav">
             <ul>
-                <li><a href="../index.html"><img src="../../assets/images/logo.png" alt="Logo"></a></li>
-                <li><a href="jean.html">Quần jean</a></li>
-                <li><a href="tay.html">Quần tây</a></li>
-                <li><a href="short.html">Quần short</a></li>
-                <li><a href="jogger.html">Quần jogger</a></li>
-                <li><a href="boxer.html">Quần boxer</a></li>
+                <li><a href="../../index.html"><img src="../../assets/images/logo.png" alt="Logo"></a></li>
+                <li><a href="../../product/jean.html">Quần jean</a></li>
+                <li><a href="../../product/tay.html">Quần tây</a></li>
+                <li><a href="../../product/short.html">Quần short</a></li>
+                <li><a href="../../product/jogger.html">Quần jogger</a></li>
+                <li><a href="../../product/boxer.html">Quần boxer</a></li>
+                <li><a href="../../tranggioithieu.html" target="_blank">Giới thiệu LoVa Store</a></li>
             </ul>
             <div class="nav-icon">
                 <a href="#"><i class="ti-shopping-cart"></i></a>  
