add cart short, tay, boxer, fix mã sản phẩm

--- a/webshop/detail-product/detail-jean4.html
+++ b/webshop/detail-product/detail-jean4.html
@@ -54,10 +54,10 @@
             </div>
         </div>
 
-        <div class="container_content" data-id="Lova123456789" data-name="Quần Jean Nam Xanh Trơn Ống Ôm" data-price="490000" data-image="../assets/images/Jean4.webp">Quần Jean Nam Xanh Trắng Trơn Ống Ôm - LoVa
+        <div class="container_content" data-id="Lova14" data-name="Quần Jean Nam Xanh Trắng Trơn Ống Ôm" data-price="490000" data-image="../assets/images/Jean4.webp">Quần Jean Nam Xanh Trắng Trơn Ống Ôm - LoVa
             <p>Còn hàng</p>
 
-            <div class="container_id"><b>Mã sản phẩm:</b>Lova123456789</div>
+            <div class="container_id"><b>Mã sản phẩm:</b>Lova14</div>
             <div class="container_price">Giá: <span class="container_sotien">490,000</span><span class="gachchan">đ</span></div>
             <fieldset class="container_sales">
                 <legend class="font-size-soluong">Khuyến mãi - Ưu đãi</legend>
