--- a/webshop/detail-product/detail-jogger7.html
+++ b/webshop/detail-product/detail-jogger7.html
@@ -54,10 +54,10 @@
             </div>
         </div>
 
-        <div class="container_content">Quần Jogger Nam Xanh Lục Ống Suông - LoVa
+        <div class="container_content" data-id="Lova47" data-name="Quần Jogger Nam Xanh Lục Ống Suông" data-price="260000" data-image="../assets/images/Jogger7.webp">Quần Jogger Nam Xanh Lục Ống Suông - LoVa
             <p>Còn hàng</p>
 
-            <div class="container_id"><b>Mã sản phẩm:</b>Lova123456789</div>
+            <div class="container_id"><b>Mã sản phẩm:</b>Lova47</div>
             <div class="container_price">Giá: <span class="container_sotien">260,000</span><span class="gachchan">đ</span></div>
             <fieldset class="container_sales">
                 <legend class="font-size-soluong">Khuyến mãi - Ưu đãi</legend>
