--- a/webshop/detail-product/detail-jogger8.html
+++ b/webshop/detail-product/detail-jogger8.html
@@ -54,10 +54,10 @@
             </div>
         </div>
 
-        <div class="container_content">Quần Jogger Nam Đen Nỉ Ống Ôm - LoVa
+        <div class="container_content" data-id="Lova48" data-name="Quần Jogger Nam Đen Nỉ Ống Ôm" data-price="250000" data-image="../assets/images/Jogger8.webp">Quần Jogger Nam Đen Nỉ Ống Ôm - LoVa
             <p>Còn hàng</p>
 
-            <div class="container_id"><b>Mã sản phẩm:</b>Lova123456789</div>
+            <div class="container_id"><b>Mã sản phẩm:</b>Lova48</div>
             <div class="container_price">Giá: <span class="container_sotien">250,000</span><span class="gachchan">đ</span></div>
             <fieldset class="container_sales">
                 <legend class="font-size-soluong">Khuyến mãi - Ưu đãi</legend>
