--- a/webshop/detail-product/detail-short2.html
+++ b/webshop/detail-product/detail-short2.html
@@ -54,10 +54,10 @@
             </div>
         </div>
 
-        <div class="container_content">Quần Short Nam Xám - LoVa
+        <div class="container_content" data-id="Lova32" data-name="Quần Short Nam Xám" data-price="320000" data-image="../assets/images/Short2.webp">Quần Short Nam Xám - LoVa
             <p>Còn hàng</p>
 
-            <div class="container_id"><b>Mã sản phẩm:</b>Lova123456789</div>
+            <div class="container_id"><b>Mã sản phẩm:</b>Lova32</div>
             <div class="container_price">Giá: <span class="container_sotien">320,000</span><span class="gachchan">đ</span></div>
             <fieldset class="container_sales">
                 <legend class="font-size-soluong">Khuyến mãi - Ưu đãi</legend>
