--- a/webshop/detail-product/detail-short3.html
+++ b/webshop/detail-product/detail-short3.html
@@ -54,10 +54,10 @@
             </div>
         </div>
 
-        <div class="container_content">Quần Short Tây Nam Xám Xanh - LoVa
+        <div class="container_content" data-id="Lova33" data-name="Quần Short Tây Nam Xám Xanh" data-price="290000" data-image="../assets/images/Short3.webp">Quần Short Tây Nam Xám Xanh - LoVa
             <p>Còn hàng</p>
 
-            <div class="container_id"><b>Mã sản phẩm:</b>Lova123456789</div>
+            <div class="container_id"><b>Mã sản phẩm:</b>Lova33</div>
             <div class="container_price">Giá: <span class="container_sotien">290,000</span><span class="gachchan">đ</span></div>
             <fieldset class="container_sales">
                 <legend class="font-size-soluong">Khuyến mãi - Ưu đãi</legend>
