--- a/webshop/detail-product/detail-short8.html
+++ b/webshop/detail-product/detail-short8.html
@@ -54,10 +54,10 @@
             </div>
         </div>
 
-        <div class="container_content">Quần Short Nam Xanh Lục- LoVa
+        <div class="container_content" data-id="Lova38" data-name="Quần Short Nam Xanh Lục" data-price="330000" data-image="../assets/images/Short8.webp">Quần Short Nam Xanh Lục- LoVa
             <p>Còn hàng</p>
 
-            <div class="container_id"><b>Mã sản phẩm:</b>Lova123456789</div>
+            <div class="container_id"><b>Mã sản phẩm:</b>Lova38</div>
             <div class="container_price">Giá: <span class="container_sotien">330,000</span><span class="gachchan">đ</span></div>
             <fieldset class="container_sales">
                 <legend class="font-size-soluong">Khuyến mãi - Ưu đãi</legend>
