--- a/webshop/detail-product/detail-tay3.html
+++ b/webshop/detail-product/detail-tay3.html
@@ -54,10 +54,10 @@
             </div>
         </div>
 
-        <div class="container_content">Quần Tây Nam Be Ống Ôm - LoVa
+        <div class="container_content" data-id="Lova23" data-name="Quần Tây Nam Be Ống Ôm" data-price="270000" data-image="../assets/images/Tay3.webp">Quần Tây Nam Be Ống Ôm - LoVa
             <p>Còn hàng</p>
 
-            <div class="container_id"><b>Mã sản phẩm:</b>Lova123456789</div>
+            <div class="container_id"><b>Mã sản phẩm:</b>Lova23</div>
             <div class="container_price">Giá: <span class="container_sotien">270,000</span><span class="gachchan">đ</span></div>
             <fieldset class="container_sales">
                 <legend class="font-size-soluong">Khuyến mãi - Ưu đãi</legend>
