--- a/webshop/detail-product/detail-jogger2.html
+++ b/webshop/detail-product/detail-jogger2.html
@@ -54,10 +54,10 @@
             </div>
         </div>
 
-        <div class="container_content">Quần Jogger Jean Nam Xanh Ống Ôm - LoVa
+        <div class="container_content" data-id="Lova42" data-name="Quần Jogger Jean Nam Xanh Ống Ôm" data-price="350000" data-image="../assets/images/Jogger2.webp">Quần Jogger Jean Nam Xanh Ống Ôm - LoVa
             <p>Còn hàng</p>
 
-            <div class="container_id"><b>Mã sản phẩm:</b>Lova123456789</div>
+            <div class="container_id"><b>Mã sản phẩm:</b>Lova42</div>
             <div class="container_price">Giá: <span class="container_sotien">350,000</span><span class="gachchan">đ</span></div>
             <fieldset class="container_sales">
                 <legend class="font-size-soluong">Khuyến mãi - Ưu đãi</legend>
