--- a/webshop/detail-product/detail-jogger3.html
+++ b/webshop/detail-product/detail-jogger3.html
@@ -54,10 +54,10 @@
             </div>
         </div>
 
-        <div class="container_content">Quần Jogger Nam Vàng Đậm Ống Ôm - LoVa
+        <div class="container_content" data-id="Lova43" data-name="Quần Jogger Nam Vàng Đậm Ống Ôm" data-price="290000" data-image="../assets/images/Jogger3.webp">Quần Jogger Nam Vàng Đậm Ống Ôm - LoVa
             <p>Còn hàng</p>
 
-            <div class="container_id"><b>Mã sản phẩm:</b>Lova123456789</div>
+            <div class="container_id"><b>Mã sản phẩm:</b>Lova43</div>
             <div class="container_price">Giá: <span class="container_sotien">290,000</span><span class="gachchan">đ</span></div>
             <fieldset class="container_sales">
                 <legend class="font-size-soluong">Khuyến mãi - Ưu đãi</legend>
