--- a/webshop/detail-product/detail-short1.html
+++ b/webshop/detail-product/detail-short1.html
@@ -54,10 +54,10 @@
             </div>
         </div>
 
-        <div class="container_content">Quần Short Nam Đen - LoVa
+        <div class="container_content"  data-id="Lova31" data-name="Quần Short Nam Đen" data-price="350000" data-image="../assets/images/Short1.webp">Quần Short Nam Đen - LoVa
             <p>Còn hàng</p>
 
-            <div class="container_id"><b>Mã sản phẩm:</b>Lova123456789</div>
+            <div class="container_id"><b>Mã sản phẩm:</b>Lova31</div>
             <div class="container_price">Giá: <span class="container_sotien">350,000</span><span class="gachchan">đ</span></div>
             <fieldset class="container_sales">
                 <legend class="font-size-soluong">Khuyến mãi - Ưu đãi</legend>
