--- a/webshop/detail-product/detail-short4.html
+++ b/webshop/detail-product/detail-short4.html
@@ -54,10 +54,10 @@
             </div>
         </div>
 
-        <div class="container_content">Quần Short Nam Xanh Lam- LoVa
+        <div class="container_content" data-id="Lova34" data-name="Quần Short Nam Xanh Lam" data-price="250000" data-image="../assets/images/Short4.webp">Quần Short Nam Xanh Lam- LoVa
             <p>Còn hàng</p>
 
-            <div class="container_id"><b>Mã sản phẩm:</b>Lova123456789</div>
+            <div class="container_id"><b>Mã sản phẩm:</b>Lova34</div>
             <div class="container_price">Giá: <span class="container_sotien">250,000</span><span class="gachchan">đ</span></div>
             <fieldset class="container_sales">
                 <legend class="font-size-soluong">Khuyến mãi - Ưu đãi</legend>
