--- a/webshop/detail-product/detail-short5.html
+++ b/webshop/detail-product/detail-short5.html
@@ -54,10 +54,10 @@
             </div>
         </div>
 
-        <div class="container_content">Quần Short Tây Nam Trắng- LoVa
+        <div class="container_content" data-id="Lova35" data-name="Quần Short Tây Nam Trắng" data-price="400000" data-image="../assets/images/Short5.webp">Quần Short Tây Nam Trắng- LoVa
             <p>Còn hàng</p>
 
-            <div class="container_id"><b>Mã sản phẩm:</b>Lova123456789</div>
+            <div class="container_id"><b>Mã sản phẩm:</b>Lova35</div>
             <div class="container_price">Giá: <span class="container_sotien">400,000</span><span class="gachchan">đ</span></div>
             <fieldset class="container_sales">
                 <legend class="font-size-soluong">Khuyến mãi - Ưu đãi</legend>
