--- a/webshop/detail-product/detail-short6.html
+++ b/webshop/detail-product/detail-short6.html
@@ -54,10 +54,10 @@
             </div>
         </div>
 
-        <div class="container_content">Quần Short Nam Xanh Lục Nhạt- LoVa
+        <div class="container_content" data-id="Lova36" data-name="Quần Short Nam Xanh Lục Nhạt" data-price="290000" data-image="../assets/images/Short6.webp">Quần Short Nam Xanh Lục Nhạt- LoVa
             <p>Còn hàng</p>
 
-            <div class="container_id"><b>Mã sản phẩm:</b>Lova123456789</div>
+            <div class="container_id"><b>Mã sản phẩm:</b>Lova36</div>
             <div class="container_price">Giá: <span class="container_sotien">290,000</span><span class="gachchan">đ</span></div>
             <fieldset class="container_sales">
                 <legend class="font-size-soluong">Khuyến mãi - Ưu đãi</legend>
