--- a/webshop/detail-product/detail-tay1.html
+++ b/webshop/detail-product/detail-tay1.html
@@ -54,10 +54,10 @@
             </div>
         </div>
 
-        <div class="container_content">Quần Tây Nam Đen Ống Suông - LoVa
+        <div class="container_content" data-id="Lova21" data-name="Quần Tây Nam Đen Ống Suông" data-price="300000" data-image="../assets/images/Tay1.webp">Quần Tây Nam Đen Ống Suông - LoVa
             <p>Còn hàng</p>
 
-            <div class="container_id"><b>Mã sản phẩm:</b>Lova123456789</div>
+            <div class="container_id"><b>Mã sản phẩm:</b>Lova21</div>
             <div class="container_price">Giá: <span class="container_sotien">300,000</span><span class="gachchan">đ</span></div>
             <fieldset class="container_sales">
                 <legend class="font-size-soluong">Khuyến mãi - Ưu đãi</legend>
