--- a/webshop/detail-product/detail-tay2.html
+++ b/webshop/detail-product/detail-tay2.html
@@ -54,10 +54,10 @@
             </div>
         </div>
 
-        <div class="container_content">Quần Tây Nam Ghi Ống Suông - LoVa
+        <div class="container_content" data-id="Lova22" data-name="Quần Tây Nam Ghi Ống Suông" data-price="250000" data-image="../assets/images/Tay2.webp">Quần Tây Nam Ghi Ống Suông - LoVa
             <p>Còn hàng</p>
 
-            <div class="container_id"><b>Mã sản phẩm:</b>Lova123456789</div>
+            <div class="container_id"><b>Mã sản phẩm:</b>Lova22</div>
             <div class="container_price">Giá: <span class="container_sotien">250,000</span><span class="gachchan">đ</span></div>
             <fieldset class="container_sales">
                 <legend class="font-size-soluong">Khuyến mãi - Ưu đãi</legend>
