--- a/webshop/detail-product/detail-tay4.html
+++ b/webshop/detail-product/detail-tay4.html
@@ -54,10 +54,10 @@
             </div>
         </div>
 
-        <div class="container_content">Quần Tây Nam Xám Ống Ôm - LoVa
+        <div class="container_content" data-id="Lova24" data-name="Quần Tây Nam Xám Ống Ôm" data-price="320000" data-image="../assets/images/Tay4.webp">Quần Tây Nam Xám Ống Ôm - LoVa
             <p>Còn hàng</p>
 
-            <div class="container_id"><b>Mã sản phẩm:</b>Lova123456789</div>
+            <div class="container_id"><b>Mã sản phẩm:</b>Lova24</div>
             <div class="container_price">Giá: <span class="container_sotien">320,000</span><span class="gachchan">đ</span></div>
             <fieldset class="container_sales">
                 <legend class="font-size-soluong">Khuyến mãi - Ưu đãi</legend>
